pre-replay-updater checkpoint